Change logic on Alert Extinguisher